# Lines-NatalieMamikonyan

./: CMakeLists.txt  README.md  main.cpp
includes/: animate.cpp  animate.h  constants.h  particle.h  random.cpp  random.h  sidebar.cpp  sidebar.h  system.cpp  system.h
includes/queue/: MyQueue.h  linkedlistfunctionsTemplated.h  node.h
